# GDCode

./: Cargo.toml  README.md  README_RU.md
.github/workflows/: rust-clippy.yml
gdcode-lc/: Cargo.toml
gdcode-ls/: Cargo.toml
gdcode-ls/src/: lib.rs
gdcode-lsp/: Cargo.toml
gdcode-lsp/src/: lib.rs
gdcode-syntax/: Cargo.toml
gdcode-syntax/src/: gdscript.pest
gdcode-ui/: Cargo.toml
gdcode-ui/src/: hotkey.rs  lib.rs  terminal.rs
src/: main.rs
