[package]
name = "gdcode-lc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee-ws-client = "0.15.1"
lsp-types = { version = "0.93.0", features = ["proposed"]}
tokio = { version = "1.20.1", features = ["full"] }
